--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-annoy==1.17.3
 ipykernel
+annoy==1.17.3
 numpy==1.26.4
 ultralytics==8.3.12
-torchvision
+fastapi[all]==0.115.11
 from_root
 Pillow
 pyyaml
 uuid
-flask
-flask_limiter
 -e .
