--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,10 @@ from_root
 Pillow
 pyyaml
 uuid
+streamlit>=1.32.0
+matplotlib>=3.8.0
+opencv-python>=4.5.0
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+plotly>=5.18.0
 -e .
